--- a/Timer/Timer/App.xaml
+++ b/Timer/Timer/App.xaml
@@ -7,6 +7,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/DispayTimerStyle.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/LapDisplayStyle.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/LapResultStyle.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/TimerButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
